--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,20 @@
 button:focus {
   outline: 0 !important;
 }
+.posts-enter {
+  opacity: 0.01;
+}
+
+.posts-enter.posts-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.posts-leave {
+  opacity: 1;
+}
+
+.posts-leave.posts-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
